k8s/client-pod.yml
apiVersion: v1
# a Pod contains containers
# - 1 or more closely related containers
# - containers should have very similar or related purpose that ABSOLUTELY has
#   to be deployed together
kind: Pod
metadata:
  name: client-pod
  labels:
    # Used by the service via the selector property
    # the label "component" and it's value "web" are arbitrary
    component: web
spec:
  containers:
    - name: client
      image: dkarter/multi-docker-client
      ports:
        - containerPort: 3000
